# package-comparer

./: Cargo.toml  README.md
.github/workflows/: general.yml
compare-packages/: Cargo.toml
compare-packages/src/: architecture_support.rs  branches.rs  cases.rs  lib.rs
compare-packages/src/cases/: fetch_only_packages_from_a_branch.rs  fetch_vr_more_in_a_than_b_branch.rs
src/: api_alt_json_templates.rs  architecture_support.rs  branches.rs  cases.rs  cli.rs  lib.rs  main.rs
src/cases/: fetch_only_packages_from_selected_branch.rs  fetch_vr_more_in_sisyphus_than_p10.rs
