[package]
name = "package-comparer"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["compare-packages"]

[dependencies]
compare-packages = { version = "0.1.0", path = "compare-packages" }
env_logger = "0.11.5"
inquire = "0.7.5"
log = "0.4.22"
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
